deploy: d6bdb1c32e429295d3ff642197168a9b71097ea2

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -278,6 +278,7 @@
   <h1>All modules for which code is available</h1>
 <ul><li><a href="barotropy/barotropic_model.html">barotropy.barotropic_model</a></li>
 <li><a href="barotropy/fluent_automation/fluent_automation.html">barotropy.fluent_automation.fluent_automation</a></li>
+<li><a href="barotropy/fluent_automation/fluent_automation_old.html">barotropy.fluent_automation.fluent_automation_old</a></li>
 <li><a href="barotropy/fluent_automation/fluent_plot_nozzle_data.html">barotropy.fluent_automation.fluent_plot_nozzle_data</a></li>
 <li><a href="barotropy/graphics.html">barotropy.graphics</a></li>
 <li><a href="barotropy/math.html">barotropy.math</a></li>
