--- a/genindex.html
+++ b/genindex.html
@@ -304,14 +304,18 @@
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.add_barotropic_expressions">add_barotropic_expressions() (in module barotropy.fluent_automation.fluent_automation)</a>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.add_barotropic_expressions">add_barotropic_expressions() (in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
-      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.add_export_variables">add_export_variables() (in module barotropy.fluent_automation.fluent_automation)</a>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.add_export_variables">add_export_variables() (in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.add_line">add_line() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.add_solution_strategy">add_solution_strategy() (in module barotropy.fluent_automation.fluent_automation)</a>
+
+      <ul>
+        <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.add_solution_strategy">(in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
+      </ul></li>
       <li><a href="source/api/barotropy.math.html#barotropy.math.all_non_negative">all_non_negative() (in module barotropy.math)</a>
 </li>
   </ul></td>
@@ -369,6 +373,13 @@
 </li>
       </ul></li>
       <li>
+    barotropy.fluent_automation.fluent_automation_old
+
+      <ul>
+        <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#module-barotropy.fluent_automation.fluent_automation_old">module</a>
+</li>
+      </ul></li>
+      <li>
     barotropy.fluent_automation.fluent_plot_nozzle_data
 
       <ul>
@@ -403,6 +414,8 @@
         <li><a href="source/api/barotropy.math.html#module-barotropy.math">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     barotropy.properties.core_calculations
 
@@ -410,8 +423,6 @@
         <li><a href="source/api/barotropy.properties.html#module-barotropy.properties.core_calculations">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     barotropy.properties.fluid_properties
 
@@ -548,7 +559,7 @@
 </li>
       <li><a href="source/api/barotropy.pysolver_view.optimization.html#barotropy.pysolver_view.optimization.count_constraints">count_constraints() (in module barotropy.pysolver_view.optimization)</a>
 </li>
-      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.create_fluent_journal">create_fluent_journal() (in module barotropy.fluent_automation.fluent_automation)</a>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.create_fluent_journal">create_fluent_journal() (in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
       <li><a href="source/api/barotropy.graphics.html#barotropy.graphics.create_gif">create_gif() (in module barotropy.graphics)</a>
 </li>
@@ -562,7 +573,7 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.read_expression_file.description">description() (barotropy.fluent_automation.fluent_automation.read_expression_file method)</a>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.read_expression_file.description">description() (barotropy.fluent_automation.fluent_automation_old.read_expression_file method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -596,7 +607,7 @@
         <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.ExpressionExporter.export_expressions_fluent">(barotropy.barotropic_model.ExpressionExporter method)</a>
 </li>
       </ul></li>
-      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.read_expression_file.expression">expression() (barotropy.fluent_automation.fluent_automation.read_expression_file method)</a>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.read_expression_file.expression">expression() (barotropy.fluent_automation.fluent_automation_old.read_expression_file method)</a>
 </li>
       <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.ExpressionExporter">ExpressionExporter (class in barotropy.barotropic_model)</a>
 </li>
@@ -788,6 +799,8 @@
 </li>
         <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#module-barotropy.fluent_automation.fluent_automation">barotropy.fluent_automation.fluent_automation</a>
 </li>
+        <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#module-barotropy.fluent_automation.fluent_automation_old">barotropy.fluent_automation.fluent_automation_old</a>
+</li>
         <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#module-barotropy.fluent_automation.fluent_plot_nozzle_data">barotropy.fluent_automation.fluent_plot_nozzle_data</a>
 </li>
         <li><a href="source/api/barotropy.fluent_automation.stream_residuals.html#module-barotropy.fluent_automation.stream_residuals">barotropy.fluent_automation.stream_residuals</a>
@@ -854,9 +867,17 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.parse_fluent_out">parse_fluent_out() (in module barotropy.fluent_automation.fluent_automation)</a>
+
+      <ul>
+        <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.parse_fluent_out">(in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
+      </ul></li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.parse_fluent_xy">parse_fluent_xy() (in module barotropy.fluent_automation.fluent_automation)</a>
+
+      <ul>
+        <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.parse_fluent_xy">(in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
+      </ul></li>
       <li><a href="source/api/barotropy.pysolver_view.nonlinear_system.html#barotropy.pysolver_view.nonlinear_system.NonlinearSystemSolver.plot_convergence_history">plot_convergence_history() (barotropy.pysolver_view.nonlinear_system.NonlinearSystemSolver method)</a>
 
       <ul>
@@ -878,17 +899,25 @@
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_pressure_distribution">plot_pressure_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.plot_residuals">plot_residuals() (in module barotropy.fluent_automation.fluent_automation)</a>
+
+      <ul>
+        <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.plot_residuals">(in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
+      </ul></li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.plot_residuals_real_time">plot_residuals_real_time() (in module barotropy.fluent_automation.fluent_automation)</a>
+
+      <ul>
+        <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.plot_residuals_real_time">(in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
+      </ul></li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_speed_sound_distribution">plot_speed_sound_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_velocity_distribution">plot_velocity_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_viscosity_distribution">plot_viscosity_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_void_fraction_distribution">plot_void_fraction_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
       <li><a href="source/api/barotropy.graphics.html#barotropy.graphics.plot_xy_data">plot_xy_data() (in module barotropy.graphics)</a>
@@ -924,7 +953,11 @@
 </li>
       </ul></li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.print_transcript_real_time">print_transcript_real_time() (in module barotropy.fluent_automation.fluent_automation)</a>
+
+      <ul>
+        <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.print_transcript_real_time">(in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
+      </ul></li>
       <li><a href="source/api/barotropy.pysolver_view.optimization_wrappers.html#barotropy.pysolver_view.optimization_wrappers.PYGMO_SOLVERS">PYGMO_SOLVERS (in module barotropy.pysolver_view.optimization_wrappers)</a>
 </li>
   </ul></td>
@@ -935,13 +968,19 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.read_configuration_file">read_configuration_file() (in module barotropy.utilities)</a>
 </li>
-      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.read_expression_file">read_expression_file (class in barotropy.fluent_automation.fluent_automation)</a>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.read_expression_file">read_expression_file (class in barotropy.fluent_automation.fluent_automation_old)</a>
+</li>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.read_expression_file">read_expression_file() (in module barotropy.fluent_automation.fluent_automation)</a>
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.read_residual_file">read_residual_file() (in module barotropy.fluent_automation.fluent_automation)</a>
+
+      <ul>
+        <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.read_residual_file">(in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
+      </ul></li>
       <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.render_and_evaluate">render_and_evaluate() (in module barotropy.utilities)</a>
 </li>
-      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.render_fluent_journal">render_fluent_journal() (in module barotropy.fluent_automation.fluent_automation)</a>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.render_fluent_journal">render_fluent_journal() (in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
       <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.render_nested_value">render_nested_value() (in module barotropy.utilities)</a>
 </li>
@@ -960,9 +999,17 @@
       <li><a href="source/api/barotropy.pysolver_view.optimization_problems.html#barotropy.pysolver_view.optimization_problems.RosenbrockProblemConstrained">RosenbrockProblemConstrained (class in barotropy.pysolver_view.optimization_problems)</a>
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.run_cleanup_script">run_cleanup_script() (in module barotropy.fluent_automation.fluent_automation)</a>
+
+      <ul>
+        <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.run_cleanup_script">(in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
+      </ul></li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.run_fluent_simulation">run_fluent_simulation() (in module barotropy.fluent_automation.fluent_automation)</a>
+
+      <ul>
+        <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.run_fluent_simulation">(in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -1031,7 +1078,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.FluidState.to_dict">to_dict() (barotropy.properties.fluid_properties.FluidState method)</a>
 </li>
-      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.TranscriptFileMissingError">TranscriptFileMissingError</a>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.TranscriptFileMissingError">TranscriptFileMissingError</a>, <a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.TranscriptFileMissingError">[1]</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1039,7 +1086,7 @@
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.validate_journal">validate_journal() (in module barotropy.fluent_automation.fluent_automation)</a>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation_old.html#barotropy.fluent_automation.fluent_automation_old.validate_journal">validate_journal() (in module barotropy.fluent_automation.fluent_automation_old)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
