--- a/_modules/barotropy/fluent_automation/fluent_automation.html
+++ b/_modules/barotropy/fluent_automation/fluent_automation.html
@@ -581,11 +581,11 @@
     <span class="c1"># Define a mapping for the residual names to readable labels</span>
     <span class="c1"># TODO: extend to 3D and other turbulence models</span>
     <span class="n">name_map</span> <span class="o">=</span> <span class="p">{</span>
-        <span class="s1">&#39;continuity&#39;</span><span class="p">:</span> <span class="s1">&#39;$p$ - continuity&#39;</span><span class="p">,</span>
-        <span class="s1">&#39;x-velocity&#39;</span><span class="p">:</span> <span class="s1">&#39;$v_x$ - momentum&#39;</span><span class="p">,</span>
-        <span class="s1">&#39;y-velocity&#39;</span><span class="p">:</span> <span class="s1">&#39;$v_y$ - momentum&#39;</span><span class="p">,</span>
-        <span class="s1">&#39;k&#39;</span><span class="p">:</span> <span class="s1">&#39;$k$ - turbulence&#39;</span><span class="p">,</span>
-        <span class="s1">&#39;omega&#39;</span><span class="p">:</span> <span class="s1">&#39;$\omega$ - turbulence&#39;</span>
+        <span class="s1">&#39;continuity&#39;</span><span class="p">:</span> <span class="sa">r</span><span class="s1">&#39;$p$ - continuity&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;x-velocity&#39;</span><span class="p">:</span> <span class="sa">r</span><span class="s1">&#39;$v_x$ - momentum&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;y-velocity&#39;</span><span class="p">:</span> <span class="sa">r</span><span class="s1">&#39;$v_y$ - momentum&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;k&#39;</span><span class="p">:</span> <span class="sa">r</span><span class="s1">&#39;$k$ - turbulence&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;omega&#39;</span><span class="p">:</span> <span class="sa">r</span><span class="s1">&#39;$\omega$ - turbulence&#39;</span>
     <span class="p">}</span>
 
     <span class="c1"># Plot residuals using the mapped labels</span>
