--- a/_modules/barotropy/fluent_automation/fluent_plot_nozzle_data.html
+++ b/_modules/barotropy/fluent_automation/fluent_plot_nozzle_data.html
@@ -377,7 +377,7 @@
         <span class="n">lines</span><span class="p">,</span>
         <span class="n">title</span><span class="o">=</span><span class="s2">&quot;Viscosity distribution&quot;</span><span class="p">,</span> 
         <span class="n">xlabel</span><span class="o">=</span><span class="s2">&quot;Axial position (mm)&quot;</span><span class="p">,</span> 
-        <span class="n">ylabel</span><span class="o">=</span><span class="s2">&quot;Viscosity ($\mathrm{\mu}$Pa s)&quot;</span><span class="p">,</span> 
+        <span class="n">ylabel</span><span class="o">=</span><span class="sa">r</span><span class="s2">&quot;Viscosity ($\mathrm{\mu}$Pa s)&quot;</span><span class="p">,</span> 
         <span class="n">scale_x</span><span class="o">=</span><span class="mf">1e3</span><span class="p">,</span>
         <span class="n">scale_y</span><span class="o">=</span><span class="mf">1e-6</span>
     <span class="p">)</span></div>
