deploy: ab676c099a6845aabf6d092783b4508c5c1d8207

--- a/genindex.html
+++ b/genindex.html
@@ -890,8 +890,12 @@
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_nozzle_data">plot_nozzle_data() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
-      <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.Fluid.plot_phase_diagram">plot_phase_diagram() (barotropy.properties.fluid_properties.Fluid method)</a>
+      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.PolynomialFitter.plot_phase_diagram">plot_phase_diagram() (barotropy.barotropic_model.PolynomialFitter method)</a>
+
+      <ul>
+        <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.Fluid.plot_phase_diagram">(barotropy.properties.fluid_properties.Fluid method)</a>
 </li>
+      </ul></li>
       <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.PolynomialFitter.plot_polynomial">plot_polynomial() (barotropy.barotropic_model.PolynomialFitter method)</a>
 </li>
       <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.PolynomialFitter.plot_polynomial_and_error">plot_polynomial_and_error() (barotropy.barotropic_model.PolynomialFitter method)</a>
