--- a/_modules/barotropy/fluent_automation/fluent_automation.html
+++ b/_modules/barotropy/fluent_automation/fluent_automation.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>barotropy.fluent_automation.fluent_automation &#8212; barotropy v0.0.4 documentation</title>
+    <title>barotropy.fluent_automation.fluent_automation &#8212; barotropy v0.0.5 documentation</title>
   
   
   
@@ -40,7 +40,7 @@
   <link rel="preload" as="script" href="../../../_static/scripts/bootstrap.js?digest=26a4bc78f4c0ddb94549" />
 <link rel="preload" as="script" href="../../../_static/scripts/pydata-sphinx-theme.js?digest=26a4bc78f4c0ddb94549" />
 
-    <script src="../../../_static/documentation_options.js?v=aace05fd"></script>
+    <script src="../../../_static/documentation_options.js?v=113287e0"></script>
     <script src="../../../_static/doctools.js?v=9a2dae69"></script>
     <script src="../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -133,7 +133,7 @@
   
   
   
-    <p class="title logo__title">barotropy v0.0.4 documentation</p>
+    <p class="title logo__title">barotropy v0.0.5 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -604,7 +604,7 @@
 
     <span class="c1"># If save flag is set and a path is provided, save the figure in multiple formats</span>
     <span class="k">if</span> <span class="n">savefig</span> <span class="ow">and</span> <span class="n">fullpath</span><span class="p">:</span>
-        <span class="k">for</span> <span class="n">ext</span> <span class="ow">in</span> <span class="p">[</span><span class="s2">&quot;.png&quot;</span><span class="p">,</span> <span class="s2">&quot;.svg&quot;</span><span class="p">,</span> <span class="s2">&quot;.pdf&quot;</span><span class="p">]:</span>
+        <span class="k">for</span> <span class="n">ext</span> <span class="ow">in</span> <span class="p">[</span><span class="s2">&quot;.png&quot;</span><span class="p">,</span> <span class="s2">&quot;.svg&quot;</span><span class="p">,</span> <span class="s2">&quot;.eps&quot;</span><span class="p">]:</span>
             <span class="n">fig</span><span class="o">.</span><span class="n">savefig</span><span class="p">(</span><span class="n">fullpath</span> <span class="o">+</span> <span class="n">ext</span><span class="p">,</span> <span class="n">bbox_inches</span><span class="o">=</span><span class="s2">&quot;tight&quot;</span><span class="p">)</span>
 
     <span class="k">return</span> <span class="n">fig</span><span class="p">,</span> <span class="n">ax</span></div>
