--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; barotropy v0.0.4 documentation</title>
+    <title>Index &#8212; barotropy v0.0.5 documentation</title>
   
   
   
@@ -40,7 +40,7 @@
   <link rel="preload" as="script" href="_static/scripts/bootstrap.js?digest=26a4bc78f4c0ddb94549" />
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=26a4bc78f4c0ddb94549" />
 
-    <script src="_static/documentation_options.js?v=aace05fd"></script>
+    <script src="_static/documentation_options.js?v=113287e0"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -133,7 +133,7 @@
   
   
   
-    <p class="title logo__title">barotropy v0.0.4 documentation</p>
+    <p class="title logo__title">barotropy v0.0.5 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -888,7 +888,7 @@
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_mass_fraction_distribution">plot_mass_fraction_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
-      <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_nozzle_data">plot_nozzle_data() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_nozzle_xy_data">plot_nozzle_xy_data() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
       <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.PolynomialFitter.plot_phase_diagram">plot_phase_diagram() (barotropy.barotropic_model.PolynomialFitter method)</a>
 
