--- a/_modules/barotropy/barotropic_model.html
+++ b/_modules/barotropy/barotropic_model.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>barotropy.barotropic_model &#8212; barotropy v0.0.5 documentation</title>
+    <title>barotropy.barotropic_model &#8212; barotropy v0.0.6 documentation</title>
   
   
   
@@ -40,7 +40,7 @@
   <link rel="preload" as="script" href="../../_static/scripts/bootstrap.js?digest=26a4bc78f4c0ddb94549" />
 <link rel="preload" as="script" href="../../_static/scripts/pydata-sphinx-theme.js?digest=26a4bc78f4c0ddb94549" />
 
-    <script src="../../_static/documentation_options.js?v=113287e0"></script>
+    <script src="../../_static/documentation_options.js?v=06460786"></script>
     <script src="../../_static/doctools.js?v=9a2dae69"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -133,7 +133,7 @@
   
   
   
-    <p class="title logo__title">barotropy v0.0.5 documentation</p>
+    <p class="title logo__title">barotropy v0.0.6 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -643,6 +643,9 @@
             <span class="n">output_dir</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">output_dir</span><span class="p">,</span>
         <span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">poly_fitter</span><span class="o">.</span><span class="n">fit_polynomials</span><span class="p">()</span>
+
+
+
 
         <span class="c1"># Automatically initialize the ExpressionExporter</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">exporter</span> <span class="o">=</span> <span class="n">ExpressionExporter</span><span class="p">(</span>
@@ -1219,9 +1222,11 @@
         <span class="n">p_scaled</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">states</span><span class="p">[</span><span class="s2">&quot;p&quot;</span><span class="p">]</span> <span class="o">/</span> <span class="bp">self</span><span class="o">.</span><span class="n">p_in</span>
 
         <span class="c1"># Determine points within the two-phase region</span>
-        <span class="n">eps</span> <span class="o">=</span> <span class="mf">1e-9</span>
-        <span class="n">mask_1phase</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">abs</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">states</span><span class="p">[</span><span class="s2">&quot;supersaturation_degree&quot;</span><span class="p">])</span> <span class="o">&gt;</span> <span class="n">eps</span>
-        <span class="n">mask_2phase</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">abs</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">states</span><span class="p">[</span><span class="s2">&quot;supersaturation_degree&quot;</span><span class="p">])</span> <span class="o">&lt;=</span> <span class="n">eps</span>
+        <span class="c1"># eps = 1e-9</span>
+        <span class="c1"># mask_1phase = np.abs(self.states[&quot;supersaturation_degree&quot;]) &gt; eps</span>
+        <span class="c1"># mask_2phase = np.abs(self.states[&quot;supersaturation_degree&quot;]) &lt;= eps</span>
+        <span class="n">mask_1phase</span> <span class="o">=</span> <span class="o">~</span><span class="bp">self</span><span class="o">.</span><span class="n">states</span><span class="p">[</span><span class="s2">&quot;is_two_phase&quot;</span><span class="p">]</span>
+        <span class="n">mask_2phase</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">states</span><span class="p">[</span><span class="s2">&quot;is_two_phase&quot;</span><span class="p">]</span>
 
         <span class="c1"># Determine the phase change pressure if it exists and the breakpoints for the different polynomial segments</span>
         <span class="k">if</span> <span class="n">mask_2phase</span><span class="o">.</span><span class="n">any</span><span class="p">():</span>
@@ -1252,6 +1257,7 @@
                 <span class="c1"># coeffs_2p[0] -= y_2p_breakpoint - y_1p_breakpoint</span>
                 <span class="c1"># poly_2p = Polynomial(coeffs_2p)</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">poly_handles</span><span class="p">[</span><span class="n">var</span><span class="p">]</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">poly_2p</span><span class="p">)</span>
+                
 
     <span class="k">def</span> <span class="nf">_fit_blending</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
@@ -1382,13 +1388,16 @@
         <span class="c1"># The argument to the polynomials in self.poly_handles() should be normalized pressures (not physical pressures)</span>
         <span class="c1"># The values in self.poly_breakpoints are normalized pressures (not physical pressures)</span>
 
-        <span class="c1"># Convert input to array if not already</span>
+        <span class="c1"># Convert input to array and scale</span>
         <span class="n">p</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">atleast_1d</span><span class="p">(</span><span class="n">p</span><span class="p">)</span>
-        <span class="n">var_values</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">zeros_like</span><span class="p">(</span><span class="n">p</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="nb">float</span><span class="p">)</span>
-
-        <span class="c1"># Define scaled pressures for internal calculations</span>
         <span class="n">p_scaled</span> <span class="o">=</span> <span class="n">p</span> <span class="o">/</span> <span class="bp">self</span><span class="o">.</span><span class="n">p_in</span>
+
+        <span class="c1"># Reverse order of breakpoints if pressure is ascending (compression vs expansion)</span>
         <span class="n">bps</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">array</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">poly_breakpoints</span><span class="p">)</span>
+        <span class="n">bps</span> <span class="o">=</span> <span class="n">bps</span><span class="p">[::</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">p_in</span> <span class="o">&lt;</span> <span class="bp">self</span><span class="o">.</span><span class="n">p_out</span> <span class="k">else</span> <span class="n">bps</span>
+
+        <span class="c1"># Loop over polynomial segments</span>
+        <span class="n">var_values</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">zeros_like</span><span class="p">(</span><span class="n">p</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="nb">float</span><span class="p">)</span>
         <span class="k">if</span> <span class="n">variable</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">poly_handles</span><span class="o">.</span><span class="n">keys</span><span class="p">():</span>
             <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">poly</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">poly_handles</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">variable</span><span class="p">,</span> <span class="p">[])):</span>
                 <span class="n">mask</span> <span class="o">=</span> <span class="p">(</span><span class="n">p_scaled</span> <span class="o">&lt;=</span> <span class="n">bps</span><span class="p">[</span><span class="n">i</span><span class="p">])</span> <span class="o">&amp;</span> <span class="p">(</span><span class="n">p_scaled</span> <span class="o">&gt;</span> <span class="n">bps</span><span class="p">[</span><span class="n">i</span> <span class="o">+</span> <span class="mi">1</span><span class="p">])</span>
@@ -1398,21 +1407,23 @@
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;No polynomials found for variable &#39;</span><span class="si">{</span><span class="n">variable</span><span class="si">}</span><span class="s2">&#39;&quot;</span><span class="p">)</span>
 
         <span class="c1"># Safeguard for pressures lower than the lowest breakpoint (exponential decay)</span>
-        <span class="n">mask_lower</span> <span class="o">=</span> <span class="n">p_scaled</span> <span class="o">&lt;=</span> <span class="bp">self</span><span class="o">.</span><span class="n">p_out_scaled</span>
+        <span class="n">p_min_scaled</span> <span class="o">=</span> <span class="nb">min</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">p_in_scaled</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">p_out_scaled</span><span class="p">)</span>
+        <span class="n">mask_lower</span> <span class="o">=</span> <span class="n">p_scaled</span> <span class="o">&lt;=</span> <span class="n">p_min_scaled</span>
         <span class="k">if</span> <span class="n">np</span><span class="o">.</span><span class="n">any</span><span class="p">(</span><span class="n">mask_lower</span><span class="p">):</span>
             <span class="n">poly_last</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">poly_handles</span><span class="p">[</span><span class="n">variable</span><span class="p">][</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span>
-            <span class="n">a1</span> <span class="o">=</span> <span class="n">poly_last</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">p_out_scaled</span><span class="p">)</span>
-            <span class="n">a2</span> <span class="o">=</span> <span class="n">a1</span> <span class="o">/</span> <span class="n">poly_last</span><span class="o">.</span><span class="n">deriv</span><span class="p">(</span><span class="n">m</span><span class="o">=</span><span class="mi">1</span><span class="p">)(</span><span class="bp">self</span><span class="o">.</span><span class="n">p_out_scaled</span><span class="p">)</span>
-            <span class="n">exp_values</span> <span class="o">=</span> <span class="n">a1</span> <span class="o">*</span> <span class="n">np</span><span class="o">.</span><span class="n">exp</span><span class="p">((</span><span class="n">p_scaled</span><span class="p">[</span><span class="n">mask_lower</span><span class="p">]</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">p_out_scaled</span><span class="p">)</span> <span class="o">/</span> <span class="n">a2</span><span class="p">)</span>
+            <span class="n">a1</span> <span class="o">=</span> <span class="n">poly_last</span><span class="p">(</span><span class="n">p_min_scaled</span><span class="p">)</span>
+            <span class="n">a2</span> <span class="o">=</span> <span class="n">a1</span> <span class="o">/</span> <span class="n">poly_last</span><span class="o">.</span><span class="n">deriv</span><span class="p">(</span><span class="n">m</span><span class="o">=</span><span class="mi">1</span><span class="p">)(</span><span class="n">p_min_scaled</span><span class="p">)</span>
+            <span class="n">exp_values</span> <span class="o">=</span> <span class="n">a1</span> <span class="o">*</span> <span class="n">np</span><span class="o">.</span><span class="n">exp</span><span class="p">((</span><span class="n">p_scaled</span><span class="p">[</span><span class="n">mask_lower</span><span class="p">]</span> <span class="o">-</span> <span class="n">p_min_scaled</span><span class="p">)</span> <span class="o">/</span> <span class="n">a2</span><span class="p">)</span>
             <span class="n">var_values</span><span class="p">[</span><span class="n">mask_lower</span><span class="p">]</span> <span class="o">=</span> <span class="n">exp_values</span>
 
         <span class="c1"># Safeguard for pressures higher than the highest breakpoint (linear extrapolation)</span>
-        <span class="n">mask_upper</span> <span class="o">=</span> <span class="n">p_scaled</span> <span class="o">&gt;</span> <span class="bp">self</span><span class="o">.</span><span class="n">p_in_scaled</span>
+        <span class="n">p_max_scaled</span> <span class="o">=</span> <span class="nb">max</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">p_in_scaled</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">p_out_scaled</span><span class="p">)</span>
+        <span class="n">mask_upper</span> <span class="o">=</span> <span class="n">p_scaled</span> <span class="o">&gt;</span> <span class="n">p_max_scaled</span> 
         <span class="k">if</span> <span class="n">np</span><span class="o">.</span><span class="n">any</span><span class="p">(</span><span class="n">mask_upper</span><span class="p">):</span>
             <span class="n">poly_first</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">poly_handles</span><span class="p">[</span><span class="n">variable</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span>
-            <span class="n">b1</span> <span class="o">=</span> <span class="n">poly_first</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">p_in_scaled</span><span class="p">)</span>
-            <span class="n">b2</span> <span class="o">=</span> <span class="n">poly_first</span><span class="o">.</span><span class="n">deriv</span><span class="p">(</span><span class="n">m</span><span class="o">=</span><span class="mi">1</span><span class="p">)(</span><span class="bp">self</span><span class="o">.</span><span class="n">p_in_scaled</span><span class="p">)</span>
-            <span class="n">extrap</span> <span class="o">=</span> <span class="n">b1</span> <span class="o">+</span> <span class="n">b2</span> <span class="o">*</span> <span class="p">(</span><span class="n">p_scaled</span><span class="p">[</span><span class="n">mask_upper</span><span class="p">]</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">p_in_scaled</span><span class="p">)</span>
+            <span class="n">b1</span> <span class="o">=</span> <span class="n">poly_first</span><span class="p">(</span><span class="n">p_max_scaled</span> <span class="p">)</span>
+            <span class="n">b2</span> <span class="o">=</span> <span class="n">poly_first</span><span class="o">.</span><span class="n">deriv</span><span class="p">(</span><span class="n">m</span><span class="o">=</span><span class="mi">1</span><span class="p">)(</span><span class="n">p_max_scaled</span> <span class="p">)</span>
+            <span class="n">extrap</span> <span class="o">=</span> <span class="n">b1</span> <span class="o">+</span> <span class="n">b2</span> <span class="o">*</span> <span class="p">(</span><span class="n">p_scaled</span><span class="p">[</span><span class="n">mask_upper</span><span class="p">]</span> <span class="o">-</span> <span class="n">p_max_scaled</span><span class="p">)</span>
             <span class="n">var_values</span><span class="p">[</span><span class="n">mask_upper</span><span class="p">]</span> <span class="o">=</span> <span class="n">extrap</span>
 
         <span class="k">return</span> <span class="n">var_values</span></div>
@@ -1471,10 +1482,14 @@
 
         <span class="k">else</span><span class="p">:</span>
 
+            <span class="c1"># Reverse order of breakpoints if pressure is ascending (compression vs expansion)</span>
+            <span class="n">bps</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">array</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">poly_breakpoints</span><span class="p">)</span>
+            <span class="n">bps</span> <span class="o">=</span> <span class="n">bps</span><span class="p">[::</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">p_in</span> <span class="o">&lt;</span> <span class="bp">self</span><span class="o">.</span><span class="n">p_out</span> <span class="k">else</span> <span class="n">bps</span>
+
+            <span class="c1"># Concatenate to form the complete list of breakpoints</span>
+            <span class="n">breakpoints</span> <span class="o">=</span> <span class="p">[</span><span class="mf">0.8</span> <span class="o">*</span> <span class="n">bps</span><span class="p">[</span><span class="mi">0</span><span class="p">]]</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">poly_breakpoints</span> <span class="o">+</span> <span class="p">[</span><span class="mf">1.2</span> <span class="o">*</span> <span class="n">bps</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]]</span>
+
             <span class="c1"># Iterate over the breakpoints and plot the segments</span>
-            <span class="n">extrap_lower</span> <span class="o">=</span> <span class="p">[</span><span class="mf">0.8</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">poly_breakpoints</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]]</span>
-            <span class="n">extrap_upper</span> <span class="o">=</span> <span class="p">[</span><span class="mf">1.2</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">poly_breakpoints</span><span class="p">[</span><span class="mi">0</span><span class="p">]]</span>
-            <span class="n">breakpoints</span> <span class="o">=</span> <span class="n">extrap_upper</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">poly_breakpoints</span> <span class="o">+</span> <span class="n">extrap_lower</span>
             <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">breakpoints</span><span class="p">)</span> <span class="o">-</span> <span class="mi">1</span><span class="p">):</span>
 
                 <span class="c1"># Generate segments between breakpoints</span>
