--- a/_modules/barotropy/properties/fluid_properties.html
+++ b/_modules/barotropy/properties/fluid_properties.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>barotropy.properties.fluid_properties &#8212; barotropy v0.0.5 documentation</title>
+    <title>barotropy.properties.fluid_properties &#8212; barotropy v0.0.6 documentation</title>
   
   
   
@@ -40,7 +40,7 @@
   <link rel="preload" as="script" href="../../../_static/scripts/bootstrap.js?digest=26a4bc78f4c0ddb94549" />
 <link rel="preload" as="script" href="../../../_static/scripts/pydata-sphinx-theme.js?digest=26a4bc78f4c0ddb94549" />
 
-    <script src="../../../_static/documentation_options.js?v=113287e0"></script>
+    <script src="../../../_static/documentation_options.js?v=06460786"></script>
     <script src="../../../_static/doctools.js?v=9a2dae69"></script>
     <script src="../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -133,7 +133,7 @@
   
   
   
-    <p class="title logo__title">barotropy v0.0.5 documentation</p>
+    <p class="title logo__title">barotropy v0.0.6 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -684,7 +684,7 @@
         <span class="n">blending_variable</span><span class="p">,</span>
         <span class="n">blending_onset</span><span class="p">,</span>
         <span class="n">blending_width</span><span class="p">,</span>
-        <span class="n">initial_phase</span><span class="p">,</span>
+        <span class="n">phase_change</span><span class="p">,</span>
         <span class="n">supersaturation</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
         <span class="n">generalize_quality</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
         <span class="n">solver_algorithm</span><span class="o">=</span><span class="s2">&quot;hybr&quot;</span><span class="p">,</span>
@@ -713,7 +713,7 @@
             <span class="n">blending_variable</span><span class="o">=</span><span class="n">blending_variable</span><span class="p">,</span>
             <span class="n">blending_onset</span><span class="o">=</span><span class="n">blending_onset</span><span class="p">,</span>
             <span class="n">blending_width</span><span class="o">=</span><span class="n">blending_width</span><span class="p">,</span>
-            <span class="n">phase_change</span><span class="o">=</span><span class="n">initial_phase</span><span class="p">,</span>
+            <span class="n">phase_change</span><span class="o">=</span><span class="n">phase_change</span><span class="p">,</span>
             <span class="n">supersaturation</span><span class="o">=</span><span class="n">supersaturation</span><span class="p">,</span>
             <span class="n">generalize_quality</span><span class="o">=</span><span class="n">generalize_quality</span><span class="p">,</span>
             <span class="n">solver_algorithm</span><span class="o">=</span><span class="n">solver_algorithm</span><span class="p">,</span>
