--- a/_modules/barotropy/barotropic_model.html
+++ b/_modules/barotropy/barotropic_model.html
@@ -879,14 +879,35 @@
 
         <span class="c1"># Do calculations according to specified type</span>
         <span class="k">if</span> <span class="n">calculation_type</span> <span class="o">==</span> <span class="s2">&quot;equilibrium&quot;</span><span class="p">:</span>
-            <span class="c1"># Compute equilibrium state using CoolProp solver</span>
-            <span class="n">state_eq</span> <span class="o">=</span> <span class="n">fluid</span><span class="o">.</span><span class="n">get_state</span><span class="p">(</span>
-                <span class="n">input_type</span><span class="o">=</span><span class="n">props</span><span class="o">.</span><span class="n">HmassP_INPUTS</span><span class="p">,</span>
-                <span class="n">prop_1</span><span class="o">=</span><span class="n">h</span><span class="p">,</span>
-                <span class="n">prop_2</span><span class="o">=</span><span class="n">p</span><span class="p">,</span>
-                <span class="n">generalize_quality</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-                <span class="n">supersaturation</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-            <span class="p">)</span>
+            
+            <span class="c1"># Compute equilibrium thermodynamic state</span>
+            <span class="k">try</span><span class="p">:</span>  <span class="c1"># Compute equilibrium state using CoolProp solver</span>
+                <span class="n">state_eq</span> <span class="o">=</span> <span class="n">fluid</span><span class="o">.</span><span class="n">get_state</span><span class="p">(</span>
+                    <span class="n">input_type</span><span class="o">=</span><span class="n">props</span><span class="o">.</span><span class="n">HmassP_INPUTS</span><span class="p">,</span>
+                    <span class="n">prop_1</span><span class="o">=</span><span class="n">h</span><span class="p">,</span>
+                    <span class="n">prop_2</span><span class="o">=</span><span class="n">p</span><span class="p">,</span>
+                    <span class="n">generalize_quality</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+                    <span class="n">supersaturation</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+                <span class="p">)</span>
+
+            <span class="k">except</span><span class="p">:</span>  <span class="c1"># Compute metastable state using custom solver</span>
+                <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Warning: CoolProp solver failed, switching to custom solver...&quot;</span><span class="p">)</span>
+                <span class="n">state_eq</span> <span class="o">=</span> <span class="n">fluid</span><span class="o">.</span><span class="n">get_state_equilibrium</span><span class="p">(</span>
+                    <span class="n">prop_1</span><span class="o">=</span><span class="s2">&quot;h&quot;</span><span class="p">,</span>
+                    <span class="n">prop_1_value</span><span class="o">=</span><span class="n">h</span><span class="p">,</span>
+                    <span class="n">prop_2</span><span class="o">=</span><span class="s2">&quot;p&quot;</span><span class="p">,</span>
+                    <span class="n">prop_2_value</span><span class="o">=</span><span class="n">p</span><span class="p">,</span>
+                    <span class="n">rhoT_guess</span><span class="o">=</span><span class="n">rhoT_guess_metastable</span><span class="p">,</span>
+                    <span class="n">generalize_quality</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+                    <span class="n">supersaturation</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+                    <span class="n">solver_algorithm</span><span class="o">=</span><span class="n">HEOS_solver</span><span class="p">,</span>
+                    <span class="n">solver_tolerance</span><span class="o">=</span><span class="n">HEOS_tolerance</span><span class="p">,</span>
+                    <span class="n">solver_max_iterations</span><span class="o">=</span><span class="n">HEOS_max_iter</span><span class="p">,</span>
+                    <span class="n">print_convergence</span><span class="o">=</span><span class="n">HEOS_print_convergence</span><span class="p">,</span>
+                <span class="p">)</span>
+
+            <span class="c1"># Update guess for the next integration step</span>
+            <span class="n">rhoT_guess_metastable</span> <span class="o">=</span> <span class="p">[</span><span class="n">state_eq</span><span class="o">.</span><span class="n">rho</span><span class="p">,</span> <span class="n">state_eq</span><span class="o">.</span><span class="n">T</span><span class="p">]</span>
             <span class="n">dhdp</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">atleast_1d</span><span class="p">(</span><span class="n">efficiency</span> <span class="o">/</span> <span class="n">state_eq</span><span class="p">[</span><span class="s2">&quot;rho&quot;</span><span class="p">])</span>
             <span class="k">return</span> <span class="n">dhdp</span><span class="p">,</span> <span class="n">state_eq</span>
 
@@ -1251,11 +1272,11 @@
                 <span class="n">poly_2p</span> <span class="o">=</span> <span class="n">Polynomial</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">p_2p</span><span class="p">,</span> <span class="n">y_2p</span><span class="p">,</span> <span class="n">deg</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">degree</span><span class="p">)</span><span class="o">.</span><span class="n">convert</span><span class="p">()</span>
 
                 <span class="c1"># # Ensure continuity by adjusting the first coefficient</span>
-                <span class="n">y_1p_breakpoint</span> <span class="o">=</span> <span class="n">poly_1p</span><span class="p">(</span><span class="n">p_transition</span><span class="p">)</span>
-                <span class="n">y_2p_breakpoint</span> <span class="o">=</span> <span class="n">poly_2p</span><span class="p">(</span><span class="n">p_transition</span><span class="p">)</span>
-                <span class="n">coeffs_2p</span> <span class="o">=</span> <span class="n">poly_2p</span><span class="o">.</span><span class="n">coef</span>
-                <span class="n">coeffs_2p</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">-=</span> <span class="n">y_2p_breakpoint</span> <span class="o">-</span> <span class="n">y_1p_breakpoint</span>
-                <span class="n">poly_2p</span> <span class="o">=</span> <span class="n">Polynomial</span><span class="p">(</span><span class="n">coeffs_2p</span><span class="p">)</span>
+                <span class="c1"># y_1p_breakpoint = poly_1p(p_transition)</span>
+                <span class="c1"># y_2p_breakpoint = poly_2p(p_transition)</span>
+                <span class="c1"># coeffs_2p = poly_2p.coef</span>
+                <span class="c1"># coeffs_2p[0] -= y_2p_breakpoint - y_1p_breakpoint</span>
+                <span class="c1"># poly_2p = Polynomial(coeffs_2p)</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">poly_handles</span><span class="p">[</span><span class="n">var</span><span class="p">]</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">poly_2p</span><span class="p">)</span>
                 
 
@@ -1528,7 +1549,7 @@
 <a class="viewcode-back" href="../../source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.PolynomialFitter.plot_polynomial_and_error">[docs]</a>
     <span class="nd">@_ensure_data_available</span>
     <span class="k">def</span> <span class="nf">plot_polynomial_and_error</span><span class="p">(</span>
-        <span class="bp">self</span><span class="p">,</span> <span class="n">var</span><span class="p">,</span> <span class="n">num_points</span><span class="o">=</span><span class="mi">2000</span><span class="p">,</span> <span class="n">showfig</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">savefig</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">output_dir</span><span class="o">=</span><span class="kc">None</span>
+        <span class="bp">self</span><span class="p">,</span> <span class="n">var</span><span class="p">,</span> <span class="n">num_points</span><span class="o">=</span><span class="mi">500</span><span class="p">,</span> <span class="n">showfig</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">savefig</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">output_dir</span><span class="o">=</span><span class="kc">None</span>
     <span class="p">):</span>
 <span class="w">        </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Plots the barotropic polynomials and original data points from the ODE solution to illustrate</span>
